tests/baselines/reference/getJavaScriptSyntacticDiagnostics01.baseline
// === Syntax and Semantic Diagnostics ===
Syntactic Diagnostics for file '/tests/cases/fourslash/server/getJavaScriptSyntacticDiagnostics01.ts':
/tests/cases/fourslash/server/a.js(1,5): error TS1134: Variable declaration expected.
/tests/cases/fourslash/server/a.js(1,8): error TS1109: Expression expected.


==== /tests/cases/fourslash/server/a.js (2 errors) ====
    var ===;
        ~~~
!!! error TS1134: Variable declaration expected.
           ~
!!! error TS1109: Expression expected.

Semantic Diagnostics for file '/tests/cases/fourslash/server/getJavaScriptSyntacticDiagnostics01.ts':


==== /tests/cases/fourslash/server/a.js (0 errors) ====
    var ===;